wacc/test/golden/syntaxErr.if.ifNothen
# if missing then clause

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true 
  else
    skip
  fi
end



In test/wacc_examples/invalid/syntaxErr/if/ifNothen.wacc (line 13, column 3):
  unexpected keyword else
  expected "then" or binary operator
  the condition of an if statement must be closed with `then`
  >  if true 
  >  else
     ^^^^
  >    skip